@@ -1,3 +1,5 @@
+02-10-25: Summoning group members now ignores summon immunity
+
 02-01-25: Updates to mage fire spells
           - Inferno moved to earlier in the fire disc
           - Inferno added a short duration fire immunity debuff
